Update to Java11+