@@ -7,17 +7,24 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>javafx-multi-scene</name>
 	<description>A demo of one way to switch between scenes in JavaFX.</description>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+	</properties>
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
+
+			<!-- Compiling -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
 			</plugin>
+
+			<!-- Executing -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -31,8 +38,26 @@
 				</executions>
 				<configuration>
 					<mainClass>net.snortum.javafx.multiscene.Main</mainClass>
+					<!-- Change the following path to your JavaFX lib directory -->
+					<arguments>--module-path /home/knute/java/javafx-sdk-11.0.2/lib --add-modules javafx.controls</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>JavaFX</id>
+			<url>https://mvnrepository.com/artifact/org.openjfx/javafx-controls</url>
+		</repository>
+	</repositories>
+
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.openjfx/javafx-controls -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>21</version>
+		</dependency>
+	</dependencies>
 </project>
